// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs компонент рендерится с двумя кнопками и контентом, активна первая кнопка и отображается первый контент 1`] = `
<body>
  <div>
    <ul
      class="tabs-nav"
    >
      <li
        class="tabs-nav__item active"
      >
        <button
          class="tabs-nav__btn"
        >
          Item 1
        </button>
      </li>
      <li
        class="tabs-nav__item"
      >
        <button
          class="tabs-nav__btn"
        >
          Item 2
        </button>
      </li>
    </ul>
    <div
      class="tabs-content"
      data-testid="tabs"
    >
      Children 1
    </div>
  </div>
</body>
`;

exports[`Tabs компонент рендерится с двумя кнопками и контентом, при клике на кнопку происходит изменение контента 1`] = `
<body>
  <div>
    <ul
      class="tabs-nav"
    >
      <li
        class="tabs-nav__item active"
      >
        <button
          class="tabs-nav__btn"
        >
          Item 1
        </button>
      </li>
      <li
        class="tabs-nav__item"
      >
        <button
          class="tabs-nav__btn"
        >
          Item 2
        </button>
      </li>
    </ul>
    <div
      class="tabs-content"
      data-testid="tabs"
    >
      Children 1
    </div>
  </div>
</body>
`;

exports[`Tabs компонент рендерится с двумя кнопками и контентом, при клике на кнопку происходит изменение контента 2`] = `
<body>
  <div>
    <ul
      class="tabs-nav"
    >
      <li
        class="tabs-nav__item"
      >
        <button
          class="tabs-nav__btn"
        >
          Item 1
        </button>
      </li>
      <li
        class="tabs-nav__item active"
      >
        <button
          class="tabs-nav__btn"
        >
          Item 2
        </button>
      </li>
    </ul>
    <div
      class="tabs-content"
      data-testid="tabs"
    >
      Children 2
    </div>
  </div>
</body>
`;
